Bunch of Miscellaneous changes. • refactored script.js (#97) • turned back on 'back to top' links (#124) • made table of contents soft scroll with jquery.scrollTo() on mobile sizes, with an offset for the fixed header • updated jquery.scrollTo() • made jquery.scrollTo() just part of the concatenated files and plugins.js just be for scripts without a home • Misc CSS changes • modify grunt clean task to actually clean built assets • fixed data.json for English that was not properly setting the English lang flag 'en' • bumped the font size of the prism.js formatted code samples

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -322,7 +322,7 @@ h1 {
 h2 {
   color: #000;
   font-size: 24px;
-  margin-bottom: 12px;
+  margin: 40px 0 12px;
 }
 
 h3 {
@@ -655,6 +655,8 @@ header .social #linkback:hover {
   margin: 0;
   padding: 3px 4px;
   position: absolute;
+  right: 0;
+  top: -20px;
   text-decoration: none;
 }
 
@@ -1102,6 +1104,7 @@ pre.line-numbers > code {
 pre {
   background-color: #000;
   overflow-x: scroll;
+  font-size: 14px;
 }
 
 /* 
