--- a/src/scss/global/_table_of_contents.scss
+++ b/src/scss/global/_table_of_contents.scss
@@ -22,6 +22,8 @@
   margin: 0;
   padding: 3px 4px;
   position: absolute;
+  right: 0;
+  top: -20px;
   text-decoration: none;
 }
 
