--- a/src/scss/js-only.scss
+++ b/src/scss/js-only.scss
@@ -4,4 +4,5 @@
 pre {
 	background-color: #000;
 	overflow-x: scroll;
+	font-size: 14px;
 }
